--- a/B. Code Challenge/style.css
+++ b/B. Code Challenge/style.css
@@ -1,13 +1,16 @@
-*, *::before, *::after{
+*,
+*::before,
+*::after {
     box-sizing: border-box;
 }
 
-:root{
+:root {
     --hue-neutral: 200;
     --hue-wrong: 0;
     --hue-correct: 145;
 }
-body{
+
+body {
     --hue: var(--hue-neutral);
     padding: 0;
     margin: 0;
@@ -18,13 +21,16 @@ body{
     align-items: center;
     background-color: hsl(var(--hue), 100%, 20%);
 }
-body .correct{
+
+body .correct {
     --hue: var(--hue-correct);
 }
-body .wrong{
+
+body .wrong {
     --hue: var(--hue-wrong);
 }
-.container{
+
+.container {
     width: 800px;
     max-width: 80%;
     background-color: #fff;
@@ -32,13 +38,15 @@ body .wrong{
     padding: 10px;
     box-shadow: 0 0 10px 2px;
 }
-.btn-grid{
+
+.btn-grid {
     display: grid;
     grid-template-columns: repeat(2, auto);
     gap: 10px;
     margin: 20px 0;
 }
-.btn{
+
+.btn {
     --hue: var(--hue-neutral);
     border: 1px solid hsl(var(--hue), 100%, 30%);
     background-color: hsl(var(--hue), 100%, 50%);
@@ -47,26 +55,33 @@ body .wrong{
     color: #fff;
     outline: none
 }
-.btn:hover{
+
+.btn:hover {
     border-color: black;
 }
-.btn.correct{
+
+.btn.correct {
     --hue: var(--hue-correct);
     color: black
 }
-.btn.wrong{
+
+.btn.wrong {
     --hue: var(--hue-wrong)
 }
-.start-btn, .next-btn{
+
+.start-btn,
+.next-btn {
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
 }
-.control{
+
+.control {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 .hide {
     display: none;
 }
